--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
                 app.init();
             }
 
+            // this has to move to it's own view
+            // needs to accept lat/long
+            // needs pan event, markers, info window
 			var map;
 			function initMap() {
 			  map = new google.maps.Map(document.getElementById('map'), {
