Adding facet search; minor clean-up.

--- a/index.html
+++ b/index.html
@@ -8,15 +8,12 @@
 
         <div id="map"></div>
     
-
-        <!--script type="text/template" id="event-tpl">
-		    <li data-index="<%= index %>">
-		        <h2>
-		            <%= name %>
-		        </h2>
-		    </li>
-		</script-->
-
+        <div id="filters">
+            <h1>Filters</h1>
+            <input type="checkbox" name="category" value="Movies">Movies<br />
+            <input type="checkbox" name="category" value="Theater">Theater<br />
+            <input type="checkbox" name="category" value="spareTimes">Spare Time (Museums, Tours, etc.)
+        </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
