Moved the filter box.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Filters</h1>
             <input type="checkbox" name="category" value="Movies">Movies<br />
             <input type="checkbox" name="category" value="Theater">Theater<br />
-            <input type="checkbox" name="category" value="spareTimes">Spare Time (Museums, Tours, etc.)
+            <input type="checkbox" name="category" value="spareTimes">Museums, Sites & Tours
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
